fix: contrast ratio of highlight style

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -339,7 +339,7 @@
     @import "_common/_highlight/light.scss";
     .chroma {
         color: var(--color-contrast-high);
-        background-color: alpha(var(--color-contrast-lower), 0.75);
+        background-color: alpha(var(--color-contrast-lower), 0.5);
     }
     {{ if .Site.Params.enableDarkMode }}
         @import "_common/_highlight/dark.scss";
